[package]
name = "broadcast-pool"
version = "0.3.2"
edition = "2021"
description = "Bitcoin Broadcast Pool - Privacy-preserving transaction scheduling and migration tool"
license = "MIT"

[[bin]]
name = "broadcast-pool"
path = "src/main.rs"

[dependencies]
# Bitcoin
bitcoin = "0.32"
bitcoincore-rpc = "0.19"
electrum-client = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (for future API)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }
dirs = "6"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# TLS for indexer SSL connections
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
webpki-roots = "0.26"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
rustls-pki-types = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# JSON-RPC for Electrum server
jsonrpc-core = "18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for transaction IDs
uuid = { version = "1", features = ["v4"] }

# Random number generation
rand = "0.8"

# Hex encoding
hex = "0.4"
socket2 = "0.5"

[dev-dependencies]
tempfile = "3"
